# nextpy-framework

./: .gitignore  .replit  COMPREHENSIVE_GUIDE.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  HOOKS_GUIDE.md  LICENSE  Makefile  Procfile  Procfile copy  QUICKSTART.md  QUICK_REFERENCE.md  README.md  compiled.css  final_tailwind_test.py  legacy_test_routing.py  main.py  nextpy.db  package.json  pyproject.toml  render.yaml  replit.md  requirements-dev.txt  requirements.txt  run_server.py  simple_hooks_demo.py  simple_test.py  styles.css  tailwind.config.js  test_component.psx  test_routing.py
attached_assets/: Pasted--NextPy-CLI-Command-line-interface-for-NextPy-projects-Commands-dev-build-start-import--1764447968865_1764447968866.txt  Pasted-That-is-the-ultimate-vision-To-create-a-truly-Next-js-equivalent-in-Python-NextPy-must-integrate-1764424967989_1764424967990.txt
docs/: conf.py  index.rst  requirements.txt
nextpy/: __init__.py  builder.py  cli.py  config.py  dev_server.py  dev_tools.py  hooks.py
pages/: about.py  clean_parser_test.py  client_component_example.py  condition.psx  contact.py  db_example.py  debug_ssr_test.py  documentation.py  examples.py  examples_advanced.py  features.py  form.psx  hooks_demo.py  hydration_example.py  index.py  index_psx.py  layout.psx  psx_examples.py  psx_expression_test.py  psx_language_demo.py  psx_test.psx  psx_test.py  psx_test_broken.psx  psx_test_clean_v2.psx  psx_test_fixed.py  robots.txt.py  search.py  server_client_demo.py  server_component_example.py  simple_expression_test.py  simple_hooks.py  simple_psx_test.py  (+13 more)
(+119 files in other folders)
