[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "click>=8.3.1",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
